--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 
         </nav>
         <!-- banner -->
-        <section class="mx-auto text-center grid grid-cols-1 gap-y-7 max-w-6xl">
+        <section class=" text-center grid items-center grid-cols-1 gap-y-7 max-w-6xl mx-auto p-3">
             <img class="mx-auto" src="./assets/banner.png" alt="">
-            <h1 class="font-extrabold text-5xl">A barn house of this design has a striking appearance</h1>
+            <h1 class=" text-3xl font-extrabold lg:text-5xl">A barn house of this design has a striking appearance</h1>
             <p>The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered
                 wood, sleek metal accents, and large windows that flood the space with natural light.</p>
             <button> <a class="btn rounded-3xl bg-icon-primary">View details<i><i><i
