mobile responsive done

--- a/index.html
+++ b/index.html
@@ -160,14 +160,14 @@
         </section>
 
         <section class="max-w-6xl mx-auto">
-            <div class=" grid gap-y-5">
-                <button class="font-bold"><i><i class="fa-solid fa-arrow-right p-2"></i></i>How we works</button>
+            <div class=" grid gap-y-5 p-5 ">
+                <button class="font-bold"><i><i class="fa-solid fa-arrow-right p-2"></i></i>How we work</button>
                     <h1 class="text-3xl lg:text-5xl text-center font-extrabold ">Our Work Processs</h1>
                     <p class="text-center ">Rustic House is a real estate company specializing in the sale
                         and rental of charming, countryside properties, offering clients personalized service and a deep
                         connection to rural living.</p>
             </div>
-            <div class="grid grid-cols-4 gap-4 mx-auto mt-5">
+            <div class="grid grid-cols-1 lg:grid-cols-4 gap-4 mx-auto mt-5 p-5">
                 <div class="bg-Card-1 rounded-2xl">
                     <div class="card-body">
                         <i> <img src="./assets/concept.png" alt=""></i>
